# mko_data_cleaner

./: .gitignore  README.md  default_settins.py  main.py  merge_dictionaries.py  pyproject.toml
data/dict/: example_dict.csv
data/example/clean_data/: readme.txt
data/example/dict/: example_dict.csv  readme.txt
data/example/raw_data/: readme.txt
data_base/: readme.txt
data_processing/: cleaner.py  csv_woker.py  db_woker.py  rep_config.py  utils.py
settings/: default_settins.py  reg_report_settings.yaml  report_settings.yaml
src/mko_data_cleaner/: app.py  main.py
src/mko_data_cleaner/core/: app_service.py  csv_service.py  csv_woker.py  db_service.py  db_woker.py  dict_service.py  errors.py  init_service.py  models.py  paths.py  services.py  utils.py
src/mko_data_cleaner/settings/: app_config.yaml
tests/: conftest.py  test_csv_service.py  test_db_service.py  test_dict_service.py
